--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,8 @@
-body{
-    font-family: system-ui;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-header{
-    background-color: #2c2c2c;
-    display: flex;
-    grid-gap: 25px;
-
-}
-
 .pre{
     background-color: #11e6f4;
     color: white;
@@ -24,6 +18,10 @@ header{
     grid-gap: 450px;
 }
 
+.pre h2{
+    margin-top: 15px;
+}
+
 .pre img{
     margin-top: 15px;
     width: 35px;
@@ -31,27 +29,166 @@ header{
     margin-right: 15px;
 }
 
-header img{
-    width: 125px;
-    height: 85px;
+body {
+    font-family: sans-serif;
 }
 
-header .menu{
-    margin-left: 25%;
+header {
+    width: 100%;
+    height: 8vh;
+    top: 0;
+    left: 0;
+    background: #1e1d1d;
+    color: #fff;
+    padding: 0 2rem;
+}
+
+nav {
+    width: 90%;
+    height: 100%;
     display: flex;
-    grid-gap: 175px;
+    justify-content: space-between;
+    align-items: center;
 }
 
-header a{
-    color: white;
+.logo {
+    font-size: 2rem;
+}
+
+.toggle {
+    display: none;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    width: 550px;
+}
+
+.menu li a {
+    color: #fff;
     text-decoration: none;
 }
 
-header a:hover{
-    text-decoration: underline;
+.btn {
+    border: 0;
+    background: #11e6f4;
     color: white;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
 }
 
+.btn.btn-secondary {
+    background: transparent;
+    border: 2px solid ;
+    color: #fff;
+}
+
+@media all and (max-width: 1000px) {
+
+    header {
+        background-color: #000;
+    }
+
+    .toggle {
+        display: block;
+        font-size: 2rem;
+        cursor: pointer;
+        position: relative;
+        z-index: 20;
+    }
+
+    .logo {
+        position: relative;
+        z-index: 20;
+    }
+
+    .ouvrir {
+        display: block;
+    }
+
+    .open .ouvrir {
+        display: none;
+    }
+
+    .menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: #000;
+        flex-direction: column;
+        padding: 2rem;
+        justify-content: space-around;
+        transform: translateX(-100%);
+        transition: transform 1s;
+    }
+
+    .open .texte{
+        display: none;
+    }
+
+    .buy img{
+        display: none;
+    }
+
+    .menu li a {
+        font-size: 2rem;
+    }
+
+    .btn {
+        font-size: 2rem;
+    }
+
+    #clc{
+        display: none;
+    }
+
+    .open #clc{
+        display: block;
+    }
+
+    .content{
+        flex-wrap: wrap
+    }
+
+    .open .menu {
+        transform: translateX(0);
+    }
+}
+
+@media all and (max-width: 1350px) {
+
+    footer .contact{
+        text-align: center;
+    }
+
+    footer .Menu{
+        margin-right: 100px;
+    }
+
+    .block .texte2{
+        display: none;
+    }
+
+    .block .texte1{
+        width: 100%;
+    }
+
+    .block .again{
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    footer .newsletter{
+        display: none;
+    }
+}
 .buy{
     background-image: url("fondtkt.jpg");
     background-repeat: no-repeat;
@@ -86,22 +223,21 @@ header a:hover{
 
 .texte{
     width: 750px;
-    margin-left: 20%;
-    height: 150px;
+    margin-left: 25%;
+    height: 250px;
 }
 
 .texte p{
     color: white;
     font-size: 20px;
-    margin-top: 250px;
 }
 
 .texte h1{
     margin-top: 145px;
-    position: absolute;
 }
+
 .texte button{
-    margin-top: 40px;
+    margin-top: 45px;
     width: 150px;
     background-color: #2c2c2c;
     color: white;
@@ -128,6 +264,7 @@ header button{
     width: 75px;
     padding: 25px;
     border: 2px solid black;
+    margin-bottom: 25px;
 }
 
 .cont1{
@@ -191,7 +328,7 @@ header button{
 }
 
 .block .texte2 img{
-    margin-right: 60%;
+    margin-right: auto;
 }
 
 .but{
@@ -343,34 +480,50 @@ footer{
   color: white;
   background-color: #121111;
   display: flex;
-  grid-gap: 300px;
   text-align: left;
+  grid-gap: 100px;
   height: 250PX;
 }
 
+footer .contact{
+    margin-top: 25px;
+    margin-left: 20%;
+}
+
 .tel{
+    margin-top: 20px;
     display: flex;
+    grid-gap: 20px;
 }
 
 .mail{
     display: flex;
+    grid-gap: 20px;
 }
 
 footer img{
+    margin-bottom: 10px;
     width: 35px;
     height: 35px;
 }
 
-.contact{
-    margin-left: 20%;
+footer .Menu{
+    margin-top: 25px;
 }
 
 footer input{
     height: 30px;
     width: 400px;
-    margin-right: 10%;
 }
 
+footer .Menu h4{
+    margin-top: 25px;
+}
+
+footer .Menu h4:hover{
+    text-decoration: underline;
+    color: white;
+}
 
 footer button{
     color: white;
@@ -388,6 +541,10 @@ footer button:hover{
     background-color: #121313;
 }
 
+footer .newsletter{
+    margin-top: 25px;
+}
+
 .end{
     background-color: #121111;
     color: white;
@@ -399,6 +556,53 @@ footer button:hover{
 }
 
 .container1{
-    margin-left: 5%;
     margin-top: 5%;
+    text-align: center;
+}
+
+.container1 img{
+    width: 100%;
+    height: 400px;
+    border-radius: 35px;
+    transition: all 1.8s;
+}
+
+.container1 .image{
+    overflow: hidden;
+    box-shadow: 5px 8px 88px -21px rgba(0,0,0,0.9);
+    -webkit-box-shadow: 5px 8px 88px -21px rgba(0,0,0,0.9);
+    -moz-box-shadow: 5px 8px 88px -21px rgba(0,0,0,0.9);
+    margin-left: 50%;
+    width: 450px;
+    transform: translate(-50%);
+    border-radius: 15%;
+}
+
+.container1 h1{
+    margin-bottom: 2%;
+    text-decoration: underline 5px #10e7f4;
+}
+
+.container1 p{
+    margin-bottom: 2%;
+    text-decoration: underline 3px #10e7f4;
+}
+
+.container1 img:hover{
+    transform: scale(1.2);
+}
+
+.container1 button{
+    margin-top: 5%;
+    width: 250px;
+    height: 75px;
+    background-color: #11e6f4;
+    border: 1px solid #11e6f4;
+    border-radius: 20px;
+}
+
+.container1 button:hover{
+    color: #000;
+    border: 1px solid black;
+    background-color: white;
 }
